--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/router": "^16.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "google-libphonenumber": "^3.2.34",
+    "intl-tel-input": "^17.0.3",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-intl-tel-input": "^3.2.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
