--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.2.0",
     "@angular/animations": "^16.0.0",
     "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.0.0",
